--- a/security/jose/Cargo.toml
+++ b/security/jose/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+base64 = "0.22.1"
 serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
+traits = { path = "../traits" }
