--- a/security/jose/Cargo.toml
+++ b/security/jose/Cargo.toml
@@ -8,3 +8,4 @@ base64 = "0.22.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 traits = { path = "../traits" }
+crypto = { path = "../crypto" }
